# vLLM

./: .gitignore  Makefile  README.md  pyproject.toml
configs/: advanced-serve.yaml  basic-serve.yaml  nginx-multi-model.conf
docker/: Dockerfile  docker-compose.yaml
docs/: architecture.md
examples/batch-inference/: batch_generate.py
examples/multi-model/: lora_serving.py
examples/python-clients/: chat_completion.py
examples/streaming/: stream_chat.py
k8s/: deployment.yaml  hpa.yaml  namespace.yaml  service.yaml
observability/grafana/: vllm-dashboard.json
observability/prometheus/: prometheus.yml
scripts/: benchmark.sh
